* ADDED: PceEmacs: Added the (fairly experimental) HTML, SGML and XML modes
  to the standard library.

* FIXED: Make GUI-tracer use library(prolog_predicate_item), avoiding
  a name-clash with private variation of this library.

* FIXED: Effectively block recursion handling keyboard events in
  `window->event'.

* ADDED: `window->normalise': optional mode-argument to allow normalisation
  in only one direction.

* FIXED/ADDED: library(pce_toc), class toc_window: improved normalisation
  handling.  Also added handling of HOME, END, PageUp and PageDown buttons.

* ADDED: `tree->root' extra optional argument `relink' to allow adding a
  new root above the current one.

* ADDED: `directory->same', analogous with `file->same'.

* ADDED: Lots of extras to the class win_printer, providing printing
  support in Windows.  Added this to PceDraw.

* FIXED: Add extension on Windows display<-win_file_name

* FIXED: Handling of recent-file menu in PceDraw.

* FIXED: Class text_buffer generation when making first change was not
  incremented, causing colourisation inconsistencies.

* ENHANCED: PceEmacs Prolog mode \C-l only to re-colour the buffer if
  it was modified.

* ADDED: Mode help for Prolog mode in PceEmacs

* FIXED: Some problems in `text_buffer<-skip_comment', operating backwards.

* ENHANCED: Various Prolog Mode layout problems if there is comment in the
  clause. 

VERSION 5.1.1
=============

* ENHANCED: User Guide

* ADDED: plot library

* UPDATED: The XPCE/Prolog User Guide.  Please check the home-page.

* ENHANCED: Win32: Use same bitmap-scaling as the X11 version.  This produces
  much better results than the MS BitBlt() operations.

* FIXED: Win32: Various issues in colour-handling.  Properly distinguish
  between palette usage and direct RGB, fixing colour distortion on
  high- and true-colour displays and added proper colormap support to
  the windows port of XPM 3.4k.


VERSION 5.1.0
=============

* LICENCE: GPL-2
